feat(permission-center): 完成 Phase 8 冲突治理与依赖检查